--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -2,6 +2,10 @@
 layout: default
 title: Teaching
 ---
+I am currently teaching assistant (chargé de TD) at École Centrale de Lyon for this semester:
+<<ul>
+  <li> <strong> Analyse appliquée </strong>, (Optimization and mesure theory) 1st year of engineering school, 40h of tutorials. </li>
+</ul>
 I was teaching assistant (chargé de TD) at Université Claude Bernard Lyon 1 for spring semester 2022:
 <ul>
   <li><strong> Fondamentaux des Mathématiques 1</strong>, Bachelor of Informatics and Mathematics (1st year) (adapted curriculum for students with not a great mathematical background), 45h of tutorials.</li>
