--- a/Research/index.html
+++ b/Research/index.html
@@ -5,5 +5,5 @@ title: Research
 <h2>Conference papers </h2>
 <h3> 2022</h3>
 <ul>
-  <li><strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves, <a href="https://hal.inria.fr/hal-03739496/document" target="_blank" rel="noopener noreferrer"> Méthodes proximales multi-niveaux pour la restauration d'images </a>, GRETSI 2022 (20 min talk)</li>
+  <li><strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves, <a href="https://hal.inria.fr/hal-03739496/" target="_blank" rel="noopener noreferrer"> Méthodes proximales multi-niveaux pour la restauration d'images </a>, GRETSI 2022 (20 min talk)</li>
 </ul>
