--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <a href="https://perso.ens-lyon.fr/elisa.riccietti/" target="_blank" rel="noopener noreferrer" >Elisa Riccietti</a>  and
           <a href="http://perso.ens-lyon.fr/nelly.pustelnik/" target="_blank" rel="noopener noreferrer">Nelly Pustelnik</a>.</p>
       <p>I am a member of the <a href="https://www.inria.fr/fr/dante" target="_blank" rel="noopener noreferrer">Inria DANTE team</a> of the LIP laboratory and my PhD is funded by <a href="https://www.inria.fr/fr" target="_blank" rel="noopener noreferrer">Inria</a>.</p>
-      <p>My work focuses on multilevel optimization methods for proximity based algorithms.</p>
+      <p>My work focuses on multilevel optimization methods for proximal based algorithms.</p>
       <p>Contact : <i>guillaume.lauga</i> [@] ens-lyon [DOT] fr, <i>guillaume.lauga</i> [@] inria [DOT] fr.</p>
     </div>
     <div class="section" id="publications">
