--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       padding: 0 100px 0;
     }
     body {
+      width: 100%;
       background-color: beige;
       font-family: "Lucida Console", monospace;
       border-left: 1px solid grey;
@@ -152,7 +153,7 @@
       <p>
       Teaching assistant at Université Claude Bernard Lyon 1:
       <ul>
-        <li><strong>Fondamentaux des Mathématiques 1,</strong> Bachelor of Informatics and Mathematics (1st year) (adapted curriculum for students with not a great mathematical background), 45h of tutorials.</li>
+        <li><strong>Fondamentaux des Mathématiques 1,</strong> Bachelor of Informatics and Mathematics (1st year), 45h of tutorials.</li>
         <li><strong>Fondamentaux des Mathématiques 2,</strong> Bachelor of Informatics and Mathematics (1st year), 19h of oral examinations.</li>
       </ul>
     </div>
