--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       background-color: beige;
       font-family: "Lucida Console", monospace;
       border-left: 1px solid grey;
-      padding: 0 100px 0;
+      padding: 0 90px 0;
     }
     body {
       width: 100%;
@@ -82,9 +82,18 @@
       color: brown;
       text-decoration: none;
     }
+    .presentation {
+      align-items: center;
+    }
     .presentation a {
       color: brown;
       text-decoration: none;
+    }
+    .presentation img {
+      margin-right: 30px;
+    }
+    .presentation p {
+      text-align: left;
     }
   </style>
 </head>
@@ -108,15 +117,16 @@
     <div id="toptitle">
       <h1>Guillaume Lauga</h1>
     </div>
-    <div class="presentation">
-      <!--<img src="my-photo.jpg" alt="My Photo">-->
-      <p>I am preparing a PhD at the École Normale Supérieure de Lyon since November 2021 under the supervision of
+    <div class="presentation" style="display: flex;">
+      <img src="DSC02601.JPG" alt="My Photo" style="width: 15%;">
+      <p>I am preparing a PhD at École Normale Supérieure de Lyon since November 2021 under the supervision of
           <a href="http://perso.ens-lyon.fr/paulo.goncalves/" target="_blank" rel="noopener noreferrer">Paulo Goncalves</a>,
           <a href="https://perso.ens-lyon.fr/elisa.riccietti/" target="_blank" rel="noopener noreferrer" >Elisa Riccietti</a>  and
-          <a href="http://perso.ens-lyon.fr/nelly.pustelnik/" target="_blank" rel="noopener noreferrer">Nelly Pustelnik</a>.</p>
-      <p>I am a member of the <a href="https://www.inria.fr/fr/dante" target="_blank" rel="noopener noreferrer">Inria DANTE team</a> of the LIP laboratory and my PhD is funded by <a href="https://www.inria.fr/fr" target="_blank" rel="noopener noreferrer">Inria</a>.</p>
-      <p>My work focuses on multilevel optimization methods for proximal based algorithms.</p>
-      <p>Contact : <i>guillaume.lauga</i> [@] ens-lyon [DOT] fr, <i>guillaume.lauga</i> [@] inria [DOT] fr.</p>
+          <a href="http://perso.ens-lyon.fr/nelly.pustelnik/" target="_blank" rel="noopener noreferrer">Nelly Pustelnik</a>. <br>
+          I am a member of the <a href="https://www.inria.fr/fr/dante" target="_blank" rel="noopener noreferrer">Inria DANTE team</a>
+           of the LIP laboratory and my PhD is funded by <a href="https://www.inria.fr/fr" target="_blank" rel="noopener noreferrer">Inria</a>. <br>
+          My work focuses on multilevel optimization methods for proximal based algorithms. <br>
+      Contact : <i>guillaume.lauga</i> [@] ens-lyon [DOT] fr, <i>guillaume.lauga</i> [@] inria [DOT] fr.
     </div>
     <div class="section" id="publications">
       <h2>Publications</h2>
@@ -127,7 +137,7 @@
           <br>
           <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
           <br>
-          Preprint, 2022
+          Preprint, 2022.
         </li>
         <li>
           <a href="https://hal.inria.fr/hal-03739496/" target="_blank" rel="noopener noreferrer">
@@ -135,9 +145,12 @@
           <br>
           <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
           <br>
-          Colloque GRETSI, September 2022
+          Colloque GRETSI, September 2022/
         </li>
       </ul>
+    </div>
+    <div class="section">
+      <h2>News</h2>
     </div>
     <div class="section" id="teaching">
       <h2>Teaching</h2>
