--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       margin-right: 30px;
     }
     .presentation p {
+      font-size: 1em;
       text-align: left;
     }
   </style>
@@ -118,7 +119,7 @@
       <h1>Guillaume Lauga</h1>
     </div>
     <div class="presentation" style="display: flex;">
-      <img src="DSC02601_zip.JPG" alt="My Photo" style="width: 15%;">
+      <img src="DSC02601_zip.JPG" alt="My Photo" style="width: 150px;">
       <p>I am preparing a PhD at École Normale Supérieure de Lyon since November 2021 under the supervision of
           <a href="http://perso.ens-lyon.fr/paulo.goncalves/" target="_blank" rel="noopener noreferrer">Paulo Goncalves</a>,
           <a href="https://perso.ens-lyon.fr/elisa.riccietti/" target="_blank" rel="noopener noreferrer" >Elisa Riccietti</a>  and
