--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <h1>Guillaume Lauga</h1>
     </div>
     <div class="presentation" style="display: flex;">
-      <img src="DSC02601_zip.JPG" alt="My Photo" style="width: 150px;">
+      <img src="DSC02602.JPG" alt="My Photo" style="width: 150px;">
       <p>I am preparing a PhD at École Normale Supérieure de Lyon since November 2021 under the supervision of
           <a href="http://perso.ens-lyon.fr/paulo.goncalves/" target="_blank" rel="noopener noreferrer">Paulo Goncalves</a>,
           <a href="https://perso.ens-lyon.fr/elisa.riccietti/" target="_blank" rel="noopener noreferrer" >Elisa Riccietti</a>  and
