--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <br>
           <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
           <br>
-          Colloque GRETSI, September 2022/
+          Colloque GRETSI, September 2022.
         </li>
       </ul>
     </div>
