--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <br>
           <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
           <br>
-          Preprint, 2022.
+          ICASSP, 2023.
         </li>
         <li>
           <a href="https://hal.inria.fr/hal-03739496/" target="_blank" rel="noopener noreferrer">
@@ -152,6 +152,11 @@
     </div>
     <div class="section">
       <h2>News</h2>
+      <ul>
+        <li>
+          Multilevel Proximal Methods for Image Restoration (<a href="Slides_CSE_1_mars_2023.pdf" target="_blank" rel="noopener noreferrer" download="slides_CSE_Lauga">slides</a>), talk at SIAM CSE 2023.
+        </li>
+      </ul>
     </div>
     <div class="section" id="teaching">
       <h2>Teaching</h2>
