--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <a href="http://perso.ens-lyon.fr/paulo.goncalves/" target="_blank" rel="noopener noreferrer">Paulo Goncalves</a>,
           <a href="https://perso.ens-lyon.fr/elisa.riccietti/" target="_blank" rel="noopener noreferrer" >Elisa Riccietti</a>  and
           <a href="http://perso.ens-lyon.fr/nelly.pustelnik/" target="_blank" rel="noopener noreferrer">Nelly Pustelnik</a>. <br>
-          I am a member of the <a href="https://www.inria.fr/fr/dante" target="_blank" rel="noopener noreferrer">Inria DANTE team</a>
+          I am a member of the <a href="https://team.inria.fr/ockham/" target="_blank" rel="noopener noreferrer">Inria OCKHAM team</a>
            of the LIP laboratory and my PhD is funded by <a href="https://www.inria.fr/fr" target="_blank" rel="noopener noreferrer">Inria</a>. <br>
           My work focuses on multilevel optimization methods for proximal based algorithms. <br>
       Contact : <i>guillaume.lauga</i> [@] ens-lyon [DOT] fr, <i>guillaume.lauga</i> [@] inria [DOT] fr.
