--- a/index.html
+++ b/index.html
@@ -133,6 +133,22 @@
       <h2>Publications</h2>
       <ul>
         <li>
+          <a href="https://hal.inria.fr/hal-04067225" target="_blank" rel="noopener noreferrer">
+            Méthodes multi-niveaux pour la restauration d'images hyperspectrales</a>
+          <br>
+          <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
+          <br>
+          Preprint, 2023.
+        </li>
+        <li>
+          <a href="https://hal.science/hal-04062317" target="_blank" rel="noopener noreferrer">
+            Sparsity in neural networks can improve their privacy</a>
+          <br>
+          A. Gonon, L. Zheng, C. Lalanne, Q.-T. Le, <strong>G. Lauga</strong>, C. Pouliquen.
+          <br>
+          Preprint, 2023.
+        </li>
+        <li>
           <a href="https://hal.archives-ouvertes.fr/hal-03831180" target="_blank" rel="noopener noreferrer">
             Multilevel FISTA for Image Restoration</a>
           <br>
@@ -151,7 +167,7 @@
       </ul>
     </div>
     <div class="section">
-      <h2>News</h2>
+      <h2>Talks</h2>
       <ul>
         <li>
           Multilevel Proximal Methods for Image Restoration (<a href="Slides_CSE_1_mars_2023.pdf" target="_blank" rel="noopener noreferrer" download="slides_CSE_Lauga">slides</a>), talk at SIAM CSE 2023.
