--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
       <h2>Publications</h2>
       <ul>
         <li>
+          <a href="https://inria.hal.science/hal-04075814" target="_blank" rel = "noopener noreferrer">
+            IML FISTA: Inexact MuLtilevel FISTA for Image Restoration
+          </a>
+          <br>
+          <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
+          <br>
+          Preprint, 2023.
+        </li>
+        <li>
           <a href="https://hal.inria.fr/hal-04067225" target="_blank" rel="noopener noreferrer">
             Méthodes multi-niveaux pour la restauration d'images hyperspectrales</a>
           <br>
