--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <br>
           <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
           <br>
-          Preprint, 2023.
+          Preprint, 2023. [<a href="https://github.com/laugaguillaume/IML_FISTA_image_restoration" target="_blank" rel = "noopener noreferrer"> CODE</a>]
         </li>
         <li>
           <a href="https://hal.inria.fr/hal-04067225" target="_blank" rel="noopener noreferrer">
