--- a/index.html
+++ b/index.html
@@ -179,7 +179,13 @@
       <h2>Talks</h2>
       <ul>
         <li>
-          Multilevel Proximal Methods for Image Restoration (<a href="Slides_CSE_1_mars_2023.pdf" target="_blank" rel="noopener noreferrer" download="slides_CSE_Lauga">slides</a>), talk at SIAM CSE 2023.
+          Multilevel Proximal Methods for Image Restoration, Optimization and Control in Burgundy, May 9-11 2023
+        </li>
+        <li>
+          Multilevel Proximal Methods for Image Restoration, Séminaire Images Optimisation et Probabilités, Institut de Mathématiques de Bordeaux, May 4 2023
+        </li>
+        <li>
+          Multilevel Proximal Methods for Image Restoration (<a href="Slides_CSE_1_mars_2023.pdf" target="_blank" rel="noopener noreferrer" download="slides_CSE_Lauga">slides</a>), SIAM CSE 2023
         </li>
       </ul>
     </div>
