--- a/index.html
+++ b/index.html
@@ -178,14 +178,17 @@
     <div class="section">
       <h2>Talks</h2>
       <ul>
-        <li>
-          Multilevel Proximal Methods for Image Restoration, Optimization and Control in Burgundy, May 9-11 2023 [<a href="https://hal.science/hal-04105509" target="_blank" rel = "noopener noreferrer">SLIDES</a>]
+        <li> 
+          Multilevel Proximal Methods for Image Restoration, Workshop on Optimization, Berlin, June 14-16 2023 (invited)
         </li>
         <li>
-          Multilevel Proximal Methods for Image Restoration, Séminaire Images Optimisation et Probabilités, Institut de Mathématiques de Bordeaux, May 4 2023
+          Multilevel Proximal Methods for Image Restoration, Optimization and Control in Burgundy, May 9-11 2023 [<a href="https://hal.science/hal-04105509" target="_blank" rel = "noopener noreferrer">SLIDES</a>] (invited)
         </li>
         <li>
-          Multilevel Proximal Methods for Image Restoration, SIAM CSE 2023 [<a href="Slides_CSE_1_mars_2023.pdf" target="_blank" rel="noopener noreferrer" download="slides_CSE_Lauga">SLIDES</a>]
+          Multilevel Proximal Methods for Image Restoration, Séminaire Images Optimisation et Probabilités, Institut de Mathématiques de Bordeaux, May 4 2023 (invited)
+        </li>
+        <li>
+          Multilevel Proximal Methods for Image Restoration, SIAM CSE 2023 [<a href="Slides_CSE_1_mars_2023.pdf" target="_blank" rel="noopener noreferrer" download="slides_CSE_Lauga">SLIDES</a>] (invited by Elisa Riccietti)
         </li>
       </ul>
     </div>
