--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <br>
           <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
           <br>
-          Preprint, 2023.
+          Colloque GRETSI, September 2023.
         </li>
         <li>
           <a href="https://hal.science/hal-04062317" target="_blank" rel="noopener noreferrer">
@@ -163,7 +163,7 @@
           <br>
           <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
           <br>
-          ICASSP, 2023.
+          ICASSP, June 2023.
         </li>
         <li>
           <a href="https://hal.inria.fr/hal-03739496/" target="_blank" rel="noopener noreferrer">
