--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <ul>
         <li>
           <a href="https://inria.hal.science/hal-04075814" target="_blank" rel = "noopener noreferrer">
-            IML FISTA: Inexact MuLtilevel FISTA for Image Restoration
+            IML FISTA: A Multilevel Framework for Inexact and Inertial Forward-Backward. Application to Image Restoration
           </a>
           <br>
           <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
@@ -155,7 +155,7 @@
           <br>
           A. Gonon, L. Zheng, C. Lalanne, Q.-T. Le, <strong>G. Lauga</strong>, C. Pouliquen.
           <br>
-          Preprint, 2023.
+          Colloque GRETSI, September 2023.
         </li>
         <li>
           <a href="https://hal.archives-ouvertes.fr/hal-03831180" target="_blank" rel="noopener noreferrer">
