--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <p>
       Teaching assistant at École Centrale de Lyon:
       <ul>
-        <li><strong>Analyse appliquée,</strong> (Optimization and mesure theory) 1st year of engineering school, 40h of tutorials.</li>
+        <li><strong>Analyse appliquée,</strong> (Optimization and measure theory) 1st year of engineering school, 40h of tutorials.</li>
       </ul>
       <p>
         2021-2022:
