--- a/index.html
+++ b/index.html
@@ -211,6 +211,14 @@
     <div class="section" id="teaching">
       <h2>Teaching</h2>
       <p>
+        2023-2024:
+      <p>
+      Teaching assistant at École Normale Supérieure de Lyon:
+      <ul>
+        <li><strong>Fundamentals of Machine Learning</strong> M1, 10h of tutorials.</li>
+        <li><strong>Optmization</strong> M1, 28h of tutorials.</li>
+      </ul>
+      <p>
         2022-2023:
       <p>
       Teaching assistant at École Centrale de Lyon:
