--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
     </div>
     <div class="section">
       <h2>News</h2>
-      <ul class="center">
-        <li><b>Our paper on IML FISTA has been accepted for publication in SIAM Journal on Imaging Sciences !</b></li>
+      <ul>
+        <li><b>(March 14 2024) Our paper on IML FISTA has been accepted for publication in SIAM Journal on Imaging Sciences !</b></li>
         <li><img src="thumbnail_IMLFISTA.png" alt="Reconstructed images with IML FISTA" style="width: 500px;"></li>
         <li>Reconstructed images with IML FISTA vs FISTA at 2 iterations and after 14h (end) of CPU time</li>
       </ul>
@@ -155,7 +155,7 @@
           <br>
           <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
           <br>
-          Preprint, 2023. [<a href="https://github.com/laugaguillaume/IML_FISTA_image_restoration" target="_blank" rel = "noopener noreferrer">CODE</a>]
+          SIAM Journal of Imaging Sciences, to appear. [<a href="https://github.com/laugaguillaume/IML_FISTA_image_restoration" target="_blank" rel = "noopener noreferrer">CODE</a>]
         </li>
         <li>
           <a href="https://hal.inria.fr/hal-04067225" target="_blank" rel="noopener noreferrer">
