--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <ul>
         <li><b>(March 14 2024) Our paper on IML FISTA has been accepted for publication in SIAM Journal on Imaging Sciences !</b></li>
         <li><img src="thumbnail_IMLFISTA.png" alt="Reconstructed images with IML FISTA" style="width: 500px;"></li>
-        <li>Reconstructed images with IML FISTA vs FISTA at 2 iterations and after 14h (end) of CPU time</li>
+        <li>Reconstructed hyperspectral image (<a href="https://personalpages.manchester.ac.uk/staff/d.h.foster/Hyperspectral_Images_of_Illustrated_Manuscripts.html" target="_blank" rel="noopener noreferrer">source</a>) with IML FISTA vs FISTA at 2 iterations and after 14h (end) of CPU time</li>
       </ul>
     </div>
     <div class="section" id="publications">
