--- a/index.html
+++ b/index.html
@@ -149,6 +149,13 @@
       <h2>Publications</h2>
       <ul>
         <li>
+            A multilevel framework for accelerating uSARA in radio-interferometric imaging 
+          <br>
+          <strong>G. Lauga</strong>, A. Repetti, E. Riccietti, N. Pustelnik, P. Gonçalves, Y.Wiaux.
+          <br>
+          Submitted to EUSIPCO, 2024.
+        </li>
+        <li>
           <a href="https://inria.hal.science/hal-04075814" target="_blank" rel = "noopener noreferrer">
             IML FISTA: A Multilevel Framework for Inexact and Inertial Forward-Backward. Application to Image Restoration
           </a>
