--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
       <h2>Publications</h2>
       <ul>
         <li>
+          <a href="https://inria.hal.science/hal-04509285" target="_blank" rel = "noopener noreferrer">
             A multilevel framework for accelerating uSARA in radio-interferometric imaging 
+          </a>
           <br>
           <strong>G. Lauga</strong>, A. Repetti, E. Riccietti, N. Pustelnik, P. Gonçalves, Y.Wiaux.
           <br>
