--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
     <div class="section">
       <h2>Talks</h2>
       <ul>
+        <li>
+          Multilevel Proximal Methods for Image Restoration, Séminaire Contrôle et Optimisation, Insa Rouen, April 23 2024
+        </li>
+        <li>
+          Multilevel Proximal Methods for Image Restoration: Application to Radio-Interferometry, SMAI MODE, Lyon, March 26-29 2024
+        </li>
         <li> 
           Multilevel Proximal Methods for Image Restoration, Workshop on Optimization, Berlin, June 14-16 2023 (invited)
         </li>
@@ -213,7 +219,7 @@
           Multilevel Proximal Methods for Image Restoration, Séminaire Images Optimisation et Probabilités, Institut de Mathématiques de Bordeaux, May 4 2023 (invited)
         </li>
         <li>
-          Multilevel Proximal Methods for Image Restoration, SIAM CSE 2023 [<a href="Slides_CSE_1_mars_2023.pdf" target="_blank" rel="noopener noreferrer" download="slides_CSE_Lauga">SLIDES</a>] (invited by Elisa Riccietti)
+          Multilevel Proximal Methods for Image Restoration, SIAM CSE 2023 [<a href="Slides_CSE_1_mars_2023.pdf" target="_blank" rel="noopener noreferrer" download="slides_CSE_Lauga">SLIDES</a>] 
         </li>
       </ul>
     </div>
