--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <br>
           <strong>G. Lauga</strong>, A. Repetti, E. Riccietti, N. Pustelnik, P. Gonçalves, Y.Wiaux.
           <br>
-          Submitted to EUSIPCO, 2024.
+          Accepted to EUSIPCO, Lyon, 2024.
         </li>
         <li>
           <a href="https://inria.hal.science/hal-04075814" target="_blank" rel = "noopener noreferrer">
@@ -203,6 +203,9 @@
     <div class="section">
       <h2>Talks</h2>
       <ul>
+        <li>
+          Multilevel Proximal Methods for Image Restoration: Application to Radio-interferometric Imaging, SIAM Linear Algebra, Paris, May 13-17 2024
+        </li>
         <li>
           Multilevel Proximal Methods for Image Restoration, Séminaire Contrôle et Optimisation, Insa Rouen, April 23 2024
         </li>
