--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
           Multilevel Proximal Methods for Image Restoration: Application to Radio-Interferometry, SMAI MODE, Lyon, March 26-29 2024
         </li>
         <li> 
-          Multilevel Proximal Methods for Image Restoration, Workshop on Optimization, Berlin, June 14-16 2023 (invited)
+          Multilevel Proximal Methods for Image Restoration, Workshop on Optimization, Berlin, June 14-16 2023  
         </li>
         <li>
-          Multilevel Proximal Methods for Image Restoration, Optimization and Control in Burgundy, May 9-11 2023 [<a href="https://hal.science/hal-04105509" target="_blank" rel = "noopener noreferrer">SLIDES</a>] (invited)
+          Multilevel Proximal Methods for Image Restoration, Optimization and Control in Burgundy, May 9-11 2023 [<a href="https://hal.science/hal-04105509" target="_blank" rel = "noopener noreferrer">SLIDES</a>]  
         </li>
         <li>
-          Multilevel Proximal Methods for Image Restoration, Séminaire Images Optimisation et Probabilités, Institut de Mathématiques de Bordeaux, May 4 2023 (invited)
+          Multilevel Proximal Methods for Image Restoration, Séminaire Images Optimisation et Probabilités, Institut de Mathématiques de Bordeaux, May 4 2023  
         </li>
         <li>
           Multilevel Proximal Methods for Image Restoration, SIAM CSE 2023 [<a href="Slides_CSE_1_mars_2023.pdf" target="_blank" rel="noopener noreferrer" download="slides_CSE_Lauga">SLIDES</a>] 
