--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="section">
       <h2>News</h2>
       <ul>
-        <li><b>(March 14 2024) Our paper on IML FISTA has been accepted for publication in SIAM Journal on Imaging Sciences !</b></li>
+        <li><b>(March 14 2024) Our paper on IML FISTA has been accepted for publication in SIAM Journal on Imaging Sciences: </b></li>
         <li><img src="thumbnail_IMLFISTA.png" alt="Reconstructed images with IML FISTA" style="width: 500px;"></li>
         <li>Reconstructed hyperspectral image (<a href="https://personalpages.manchester.ac.uk/staff/d.h.foster/Hyperspectral_Images_of_Illustrated_Manuscripts.html" target="_blank" rel="noopener noreferrer">source</a>) with IML FISTA vs FISTA at 2 iterations and after 14h (end) of CPU time</li>
       </ul>
@@ -204,22 +204,31 @@
       <h2>Talks</h2>
       <ul>
         <li>
-          Multilevel Proximal Methods for Image Restoration: Application to Radio-interferometric Imaging, SIAM Linear Algebra, Paris, May 13-17 2024
+          Multilevel Proximal Methods for Image Restoration: Application to Radio-interferometric Imaging, EURO, Copenhagen, June 30-July 3 2024
         </li>
         <li>
-          Multilevel Proximal Methods for Image Restoration, Séminaire Contrôle et Optimisation, Insa Rouen, April 23 2024
+          Multilevel Proximal Methods for Image Restoration, RICAM Seminar, Johannes Kepler Institute, Linz, June 24, 2024
         </li>
         <li>
-          Multilevel Proximal Methods for Image Restoration: Application to Radio-Interferometry, SMAI MODE, Lyon, March 26-29 2024
+          Multilevel Proximal Methods for Image Restoration: Application to Radio-interferometric Imaging, SIAM Linear Algebra, Paris, May 13-17, 2024
+        </li>
+        <li>
+          Multilevel Proximal Methods for Image Restoration, Séminaire Contrôle et Optimisation, Insa Rouen, April 23, 2024
+        </li>
+        <li>
+          Multilevel Proximal Methods for Image Restoration, Seminar at Heriot-Watt University, Edinburgh, April 15, 2024
+        </li>
+        <li>
+          Multilevel Proximal Methods for Image Restoration: Application to Radio-Interferometry, SMAI MODE, Lyon, March 26-29, 2024
         </li>
         <li> 
-          Multilevel Proximal Methods for Image Restoration, Workshop on Optimization, Berlin, June 14-16 2023  
+          Multilevel Proximal Methods for Image Restoration, Workshop on Optimization, Berlin, June 14-16, 2023  
         </li>
         <li>
-          Multilevel Proximal Methods for Image Restoration, Optimization and Control in Burgundy, May 9-11 2023 [<a href="https://hal.science/hal-04105509" target="_blank" rel = "noopener noreferrer">SLIDES</a>]  
+          Multilevel Proximal Methods for Image Restoration, Optimization and Control in Burgundy, May 9-11, 2023 [<a href="https://hal.science/hal-04105509" target="_blank" rel = "noopener noreferrer">SLIDES</a>]  
         </li>
         <li>
-          Multilevel Proximal Methods for Image Restoration, Séminaire Images Optimisation et Probabilités, Institut de Mathématiques de Bordeaux, May 4 2023  
+          Multilevel Proximal Methods for Image Restoration, Séminaire Images Optimisation et Probabilités, Institut de Mathématiques de Bordeaux, May 4, 2023  
         </li>
         <li>
           Multilevel Proximal Methods for Image Restoration, SIAM CSE 2023 [<a href="Slides_CSE_1_mars_2023.pdf" target="_blank" rel="noopener noreferrer" download="slides_CSE_Lauga">SLIDES</a>] 
