--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <br>
           <strong>G. Lauga</strong>, E. Riccietti, N. Pustelnik, P. Gonçalves.
           <br>
-          SIAM Journal of Imaging Sciences, to appear. [<a href="https://github.com/laugaguillaume/IML_FISTA_image_restoration" target="_blank" rel = "noopener noreferrer">CODE</a>]
+          SIAM Journal on Imaging Sciences 17 (3), 1347-1376, 2024. [<a href="https://github.com/laugaguillaume/IML_FISTA_image_restoration" target="_blank" rel = "noopener noreferrer">CODE</a>]
         </li>
         <li>
           <a href="https://hal.inria.fr/hal-04067225" target="_blank" rel="noopener noreferrer">
