--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
   <title>Guillaume Lauga</title>
   <style>
     .container {
-      overflow: scroll; /* add a scroll bar to the container */
+      /*
+      overflow: scroll; */ /* add a scroll bar to the container */
       background-color: beige;
       font-family: "Lucida Console", monospace;
       border-left: 1px solid grey;
-      padding: 0 90px 0;
+      padding: 0 0px 0;
     }
     body {
       width: 100%;
       background-color: beige;
       font-family: "Lucida Console", monospace;
-      border-left: 1px solid grey;
-      padding: 0 100px 0;
+      /* border-left: 1px solid grey; */
+      padding: 0 40px 0;
     }
     .title {
       font-size: 2em;
     }
     .nav {
-      width: 120px;
+      width: 0px;
       background-color: beige;
-      padding: 20px;
-      border: 1px solid grey;
+      padding: 10px;
+      border: 0px solid grey;
       position: fixed;
       left: 0;
       top: 0;
@@ -106,6 +107,7 @@
   </style>
 </head>
 <body>
+  <!-- 
   <nav class="nav">
     <h3>Menu</h3>
     <ul>
@@ -121,6 +123,7 @@
       <li><a target="_blank" href="https://fr.linkedin.com/in/guillaume-lauga">Linkedin</a></li>
     </ul>
   </nav>
+  -->
   <div class="container">
   <main class="main">
     <div id="toptitle">
@@ -129,7 +132,7 @@
     <div class="presentation" style="display: flex;">
       <img src="DSC02602.JPG" alt="My Photo" style="width: 150px;">
       <p>I am preparing a PhD at École Normale Supérieure de Lyon since November 2021 under the supervision of
-          <a href="http://perso.ens-lyon.fr/paulo.goncalves/" target="_blank" rel="noopener noreferrer">Paulo Goncalves</a>,
+          <a href="http://perso.ens-lyon.fr/paulo.goncalves/" target="_blank" rel="noopener noreferrer">Paulo Gonçalves</a>,
           <a href="https://perso.ens-lyon.fr/elisa.riccietti/" target="_blank" rel="noopener noreferrer" >Elisa Riccietti</a>  and
           <a href="http://perso.ens-lyon.fr/nelly.pustelnik/" target="_blank" rel="noopener noreferrer">Nelly Pustelnik</a>. <br>
           I am a member of the <a href="https://team.inria.fr/ockham/" target="_blank" rel="noopener noreferrer">Inria OCKHAM team</a>
@@ -140,7 +143,8 @@
     <div class="section">
       <h2>News</h2>
       <ul>
-        <li><b>(March 14 2024) Our paper on IML FISTA has been accepted for publication in SIAM Journal on Imaging Sciences: </b></li>
+        <li>(December 17, 2024) I successfully defended my thesis! </li>
+        <li>(March 14, 2024) Our paper on IML FISTA has been accepted for publication in SIAM Journal on Imaging Sciences: </li>
         <li><img src="thumbnail_IMLFISTA.png" alt="Reconstructed images with IML FISTA" style="width: 500px;"></li>
         <li>Reconstructed hyperspectral image (<a href="https://personalpages.manchester.ac.uk/staff/d.h.foster/Hyperspectral_Images_of_Illustrated_Manuscripts.html" target="_blank" rel="noopener noreferrer">source</a>) with IML FISTA vs FISTA at 2 iterations and after 14h (end) of CPU time</li>
       </ul>
@@ -243,7 +247,7 @@
       Teaching assistant at École Normale Supérieure de Lyon:
       <ul>
         <li><strong>Fundamentals of Machine Learning</strong> M1, 10h of tutorials.</li>
-        <li><strong>Optmization</strong> M1, 28h of tutorials.</li>
+        <li><strong>Optimization</strong> M1, 28h of tutorials.</li>
       </ul>
       <p>
         2022-2023:
@@ -267,7 +271,7 @@
         <b>Education:</b>
       </p>
       <ul>
-        <li>Ph.D. Student in Applied Mathematics, ENS de Lyon, 2021-2024</li>
+        <li>PhD in Optimization, ENS de Lyon, 2021-2024</li>
         <li>Engineering School (Applied Mathematics), École Centrale de Lyon, 2017-2021</li>
         <li>M.Sc. in Applied Mathematics, ECL, Université Lyon 1 and ENS Lyon, 2020-2021</li>
         <li>B.Sc. in General Mathematics, Université Lyon 1, 2018-2019</li>
