--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
       <h2>News</h2>
       <ul>
         <li>(December 17, 2024) I successfully defended my thesis! </li>
-        <li>(March 14, 2024) Our paper on IML FISTA has been accepted for publication in SIAM Journal on Imaging Sciences: </li>
+        <!-- <li>(March 14, 2024) Our paper on IML FISTA has been accepted for publication in SIAM Journal on Imaging Sciences: </li>
         <li><img src="thumbnail_IMLFISTA.png" alt="Reconstructed images with IML FISTA" style="width: 500px;"></li>
-        <li>Reconstructed hyperspectral image (<a href="https://personalpages.manchester.ac.uk/staff/d.h.foster/Hyperspectral_Images_of_Illustrated_Manuscripts.html" target="_blank" rel="noopener noreferrer">source</a>) with IML FISTA vs FISTA after 20 min (2 iterations) and after 3h (end) of CPU time</li>
+        <li>Reconstructed hyperspectral image (<a href="https://personalpages.manchester.ac.uk/staff/d.h.foster/Hyperspectral_Images_of_Illustrated_Manuscripts.html" target="_blank" rel="noopener noreferrer">source</a>) with IML FISTA vs FISTA after 20 min (2 iterations) and after 3h (end) of CPU time</li> -->
       </ul>
     </div>
     <div class="section" id="publications">
@@ -159,7 +159,7 @@
           <br>
           <strong>G. Lauga</strong>, A. Repetti, E. Riccietti, N. Pustelnik, P. Gonçalves, Y.Wiaux.
           <br>
-          Accepted to EUSIPCO, Lyon, 2024.
+          EUSIPCO, Lyon, 2024.
         </li>
         <li>
           <a href="https://inria.hal.science/hal-04075814" target="_blank" rel = "noopener noreferrer">
