changed profile pic

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
       <h1>Guillaume Lauga</h1>
     </div>
     <div class="presentation" style="display: flex;">
-      <img src="DSC02602.JPG" alt="My Photo" style="width: 150px;">
+      <!-- <img src="DSC02602.JPG" alt="My Photo" style="width: 150px;"> -->
+      <img src="20241220171744908293.jpg" alt="" style="height: 220px;">
       <p>I am preparing a PhD at École Normale Supérieure de Lyon since November 2021 under the supervision of
           <a href="http://perso.ens-lyon.fr/paulo.goncalves/" target="_blank" rel="noopener noreferrer">Paulo Gonçalves</a>,
           <a href="https://perso.ens-lyon.fr/elisa.riccietti/" target="_blank" rel="noopener noreferrer" >Elisa Riccietti</a>  and
@@ -143,9 +144,9 @@
     <div class="section">
       <h2>News</h2>
       <ul>
-        <li>(December 17, 2024) I successfully defended my thesis! </li>
+        <li>(December 17, 2024) I successfully defended my thesis! Thanks a lot to Aude Rondepierre, Bruno Torresani, Jean-Christophe Pesquet, Panos Parpas and Ivan Selesnick for accepting to be part of the jury! </li>
         <li> 
-          <img src="P1050306.JPG" alt="" style="width: 150px;"> <img src="P1050304.JPG" alt="" style="height: 220px;">
+          <img src="P1050306.JPG" alt="" style="width: 150px;"> <img src="P1050304.JPG" alt="" style="height: 220px;"> 
         </li>
         <!-- <li>(March 14, 2024) Our paper on IML FISTA has been accepted for publication in SIAM Journal on Imaging Sciences: </li>
         <li><img src="thumbnail_IMLFISTA.png" alt="Reconstructed images with IML FISTA" style="width: 500px;"></li>
