--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           I am a member of the <a href="https://team.inria.fr/ockham/" target="_blank" rel="noopener noreferrer">Inria OCKHAM team</a>
            of the LIP laboratory and my PhD is funded by <a href="https://www.inria.fr/fr" target="_blank" rel="noopener noreferrer">Inria</a>. <br>
           My work focuses on multilevel optimization methods for proximal based algorithms. <br>
-      Contact : <i>guillaume.lauga</i> [@] ens-lyon [DOT] fr, <i>guillaume.lauga</i> [@] inria [DOT] fr.
+      Contact : <i>guillaume.lauga</i> [@] ens-lyon [DOT] fr, <i>guillaume.lauga</i> [@] inria [DOT] fr. Tel: (+33)684021194.
     </div>
     <div class="section">
       <h2>News</h2>
@@ -161,7 +161,7 @@
             A multilevel framework for accelerating uSARA in radio-interferometric imaging 
           </a>
           <br>
-          <strong>G. Lauga</strong>, A. Repetti, E. Riccietti, N. Pustelnik, P. Gonçalves, Y.Wiaux.
+          <strong>G. Lauga</strong>, A. Repetti, E. Riccietti, N. Pustelnik, P. Gonçalves, Y. Wiaux.
           <br>
           EUSIPCO, Lyon, 2024.
         </li>
