updated infos + bug fixing

--- a/index.html
+++ b/index.html
@@ -15,39 +15,12 @@
       width: 100%;
       background-color: beige;
       font-family: "Lucida Console", monospace;
+      overflow-x: hidden;
       /* border-left: 1px solid grey; */
       padding: 0 40px 0;
     }
     .title {
       font-size: 2em;
-    }
-    .nav {
-      width: 0px;
-      background-color: beige;
-      padding: 10px;
-      border: 0px solid grey;
-      position: fixed;
-      left: 0;
-      top: 0;
-      bottom: 0;
-    }
-    .nav h3 {
-      font-size: 1.5em;
-      margin: 0 -10px;
-      border-bottom: 1px solid black;
-    }
-    .nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
-    .nav li {
-      font-size: 1em;
-      margin: 0 -10px;
-    }
-    .nav a {
-      text-decoration: none;
-      color: black;
     }
     .main {
       margin: 0 -20px;
@@ -107,23 +80,6 @@
   </style>
 </head>
 <body>
-  <!-- 
-  <nav class="nav">
-    <h3>Menu</h3>
-    <ul>
-      <li><a href="#" onclick="window.scrollTo(0, 0)">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#publications">Publications</a></li>
-      <li><a href="#teaching">Teaching</a></li>
-      <li><a href="#curriculum">Curriculum</a></li>
-    </ul>
-    <h3>Links</h3>
-    <ul>
-      <li><a target ="_blank" href ="https://scholar.google.com/citations?user=kp4hEB0AAAAJ&hl=fr&oi=ao">Google Scholar</a></li>
-      <li><a target="_blank" href="https://fr.linkedin.com/in/guillaume-lauga">Linkedin</a></li>
-    </ul>
-  </nav>
-  -->
   <div class="container">
   <main class="main">
     <div id="toptitle">
@@ -132,14 +88,15 @@
     <div class="presentation" style="display: flex;">
       <!-- <img src="DSC02602.JPG" alt="My Photo" style="width: 150px;"> -->
       <img src="20241220171744908293.jpg" alt="" style="height: 220px;">
-      <p>I am preparing a PhD at École Normale Supérieure de Lyon since November 2021 under the supervision of
+      <p>I obtained my PhD at École Normale Supérieure de Lyon in December 2024 under the supervision of
           <a href="http://perso.ens-lyon.fr/paulo.goncalves/" target="_blank" rel="noopener noreferrer">Paulo Gonçalves</a>,
           <a href="https://perso.ens-lyon.fr/elisa.riccietti/" target="_blank" rel="noopener noreferrer" >Elisa Riccietti</a>  and
-          <a href="http://perso.ens-lyon.fr/nelly.pustelnik/" target="_blank" rel="noopener noreferrer">Nelly Pustelnik</a>. <br>
-          I am a member of the <a href="https://team.inria.fr/ockham/" target="_blank" rel="noopener noreferrer">Inria OCKHAM team</a>
-           of the LIP laboratory and my PhD is funded by <a href="https://www.inria.fr/fr" target="_blank" rel="noopener noreferrer">Inria</a>. <br>
-          My work focuses on multilevel optimization methods for proximal based algorithms. <br>
-      Contact : <i>guillaume.lauga</i> [@] ens-lyon [DOT] fr, <i>guillaume.lauga</i> [@] inria [DOT] fr. Tel: (+33)684021194.
+          <a href="http://perso.ens-lyon.fr/nelly.pustelnik/" target="_blank" rel="noopener noreferrer">Nelly Pustelnik</a>. 
+          I was a member of the <a href="https://team.inria.fr/ockham/" target="_blank" rel="noopener noreferrer">Inria OCKHAM team</a>
+           of the LIP laboratory, funded by <a href="https://www.inria.fr/fr" target="_blank" rel="noopener noreferrer">Inria</a>. <br>
+          During my PhD my work focused on multilevel optimization methods for proximal based algorithms, with applications to image restoration problems. Adjacently, I am interested in everything related to deep learning methods. <br>  <br>
+      Contact : <i>guillaume.lauga</i> [@] ens-lyon [DOT] fr, <i>guillaume.lauga</i> [@] inria [DOT] fr. Tel: (+33)684021194. <br>
+      <!-- I also have a small <a href="blog.html">blog</a> where I post random stuff. -->
     </div>
     <div class="section">
       <h2>News</h2>
