--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       font-family: "Lucida Console", monospace;
       overflow-x: hidden;
       /* border-left: 1px solid grey; */
-      padding: 0 40px 0;
+      padding: 0 15px ;
     }
     .title {
       font-size: 2em;
