--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
                 <p class="name" style="text-align: center;">
                   Guillaume Lauga
                 </p>
-                <p>I'm a postdoctoral researcher at <a href="https://www.ens-lyon.fr">ENS Lyon</a>, where I defended my <a href="https://hal.science/tel-04906328">thesis</a> in December 2024, supervised by <a href="http://perso.ens-lyon.fr/paulo.goncalves/" target="_blank" rel="noopener noreferrer">Paulo Gonçalves</a>,
+                <p>I'm a postdoctoral researcher at <a href="https://univ-cotedazur.fr">Université Côte d'Azur</a> with <a href="https://samuelvaiter.com">Samuel Vaiter</a>. 
+                I defended my <a href="https://hal.science/tel-04906328">thesis</a> in December 2024 at ENS Lyon, supervised by <a href="http://perso.ens-lyon.fr/paulo.goncalves/" target="_blank" rel="noopener noreferrer">Paulo Gonçalves</a>,
                   <a href="https://perso.ens-lyon.fr/elisa.riccietti/" target="_blank" rel="noopener noreferrer" >Elisa Riccietti</a>  and
                   <a href="http://perso.ens-lyon.fr/nelly.pustelnik/" target="_blank" rel="noopener noreferrer">Nelly Pustelnik</a>. 
-                  I was a member of the <a href="https://team.inria.fr/ockham/" target="_blank" rel="noopener noreferrer">Inria OCKHAM team</a>. Starting from July 2025, I will be at <a href="https://univ-cotedazur.fr">Université Côte d'Azur</a> with <a href="https://samuelvaiter.com">Samuel Vaiter</a>.
+                  I was a member of the <a href="https://team.inria.fr/ockham/" target="_blank" rel="noopener noreferrer">Inria OCKHAM team</a>.
                 </p>
                 <p>
                   During my PhD, I worked on multilevel optimization methods for proximal based algorithms, with applications to image restoration problems.
