--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   During my PhD, I worked on multilevel optimization methods for proximal based algorithms, with applications to image restoration problems.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:guillaume.lauga@ens-lyon.fr">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:guillaume.lauga@univ-cotedazur.fr">Email</a> &nbsp;/&nbsp;
                   <a href="data/CV_Guillaume__23042025.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=kp4hEB0AAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://github.com/laugaguillaume/">Github</a>
